--- a/k8s/manifests/deployment.yaml
+++ b/k8s/manifests/deployment.yaml
@@ -1,4 +1,5 @@
 # This is a sample deployment manifest file for a simple web application.
+#for testing
 apiVersion: apps/v1
 kind: Deployment
 metadata:
